--- a/blueprints.html
+++ b/blueprints.html
@@ -174,7 +174,7 @@ public class AdminController : Controller
                             <span class="text-gray-400 text-sm font-mono">Product.cs</span>
                             <button onclick="copyCode('guardian-guards-code')" class="px-3 py-1 bg-primary-600 text-white text-xs rounded hover:bg-primary-700">Copy</button>
                         </div>
-                        <pre id="guardian-guards-code" class="text-sm font-mono text-gray-100"><code>using Guardian;
+                        <pre id="guardian-guards-code" class="text-sm font-mono text-gray-100"><code>using Noundry.Guardian;
 
 public class Product
 {
