--- a/getting-started.html
+++ b/getting-started.html
@@ -347,7 +347,7 @@
                                 <div class="text-accent-500">nd dn add package Noundry.Tuxedo</div>
                                 <div class="text-accent-500">nd dn add package Noundry.Tuxedo.Bowtie</div>
                                 <div class="text-accent-500">nd dn add package Noundry.DotEnvX</div>
-                                <div class="text-accent-500">nd dn add package Guardian</div>
+                                <div class="text-accent-500">nd dn add package Noundry.Guardian</div>
                                 <div class="text-accent-500">nd dn add package Microsoft.Data.SqlServer</div>
                             </div>
 
@@ -503,7 +503,7 @@
                         <div class="bg-gray-50 dark:bg-gray-800 rounded-lg p-6">
                             <div class="bg-gray-900 dark:bg-gray-700 rounded-lg p-4 font-mono text-sm text-gray-300">
                                 <div class="text-accent-500">dotnet add package Noundry.Assertive</div>
-                                <div class="text-accent-500">dotnet add package Guardian</div>
+                                <div class="text-accent-500">dotnet add package Noundry.Guardian</div>
                             </div>
                         </div>
                     </div>
