--- a/index.html
+++ b/index.html
@@ -664,7 +664,7 @@
                             dotnet add package Noundry.TagHelpers<br>
                             dotnet add package Noundry.Authnz<br>
                             dotnet add package Noundry.Sanquhar<br>
-                            dotnet add package RazorHelpers
+                            dotnet add package Noundry.RazorHelpers
                         </code>
                     </div>
                 </div>
@@ -1624,7 +1624,7 @@
                         <div class="space-y-3">
                             <h4 class="text-sm font-semibold text-green-600 dark:text-green-400 mb-2">CLI Installation</h4>
                             <div class="font-mono text-xs bg-gray-100 dark:bg-gray-700 p-2 rounded">
-                                <span class="text-accent-500">dotnet tool install -g</span> <span class="text-gray-600 dark:text-gray-300">Noundry.Slurp</span>
+                                <span class="text-accent-500">dotnet tool install -g</span> <span class="text-gray-600 dark:text-gray-300">Noundry.Slurp.Tool</span>
                             </div>
                             <div class="font-mono text-xs bg-gray-100 dark:bg-gray-700 p-2 rounded">
                                 <span class="text-accent-500">dotnet tool install -g</span> <span class="text-gray-600 dark:text-gray-300">Noundry.Cufflink</span>
@@ -1952,8 +1952,8 @@
                     </div>
                     <div class="font-mono text-sm space-y-2">
                         <div class="text-gray-500"># Install packages</div>
-                        <div class="text-cyan-400">$ dotnet add package Tailbreeze</div>
-                        <div class="text-cyan-400">$ dotnet add package Tailbreeze.Build</div>
+                        <div class="text-cyan-400">$ dotnet add package Noundry.Tailbreeze</div>
+                        <div class="text-cyan-400">$ dotnet add package Noundry.Tailbreeze.Build</div>
 
                         <div class="text-gray-500 mt-4">// Program.cs - 2 lines of code</div>
                         <div class="text-gray-300">builder.Services.<span class="text-green-400">AddTailbreeze</span>();</div>
