--- a/libraries.html
+++ b/libraries.html
@@ -145,7 +145,7 @@
                     
                     <div class="mb-6 bg-gray-900 dark:bg-gray-700 rounded-lg p-4">
                         <div class="text-sm font-mono text-gray-300">
-                            <div class="text-accent-500 mb-2">$ dotnet add package Guardian</div>
+                            <div class="text-accent-500 mb-2">$ dotnet add package Noundry.Guardian</div>
                             <div class="text-gray-500">// Usage example</div>
                             <div><span class="text-yellow-400">Guard</span>.<span class="text-green-400">Against</span>.<span class="text-green-400">Null</span>(<span class="text-blue-400">user</span>);</div>
                             <div><span class="text-yellow-400">Guard</span>.<span class="text-green-400">Against</span>.<span class="text-green-400">NullOrEmpty</span>(<span class="text-blue-400">email</span>);</div>
@@ -405,7 +405,7 @@
                     <p class="text-gray-600 dark:text-gray-300 mb-4">Zero-config Tailwind CSS integration for ASP.NET Core. Auto-installs CLI, watches for changes, and builds optimized CSS. No Node.js required.</p>
 
                     <div class="text-sm font-mono bg-gray-100 dark:bg-gray-800 rounded p-2 mb-4">
-                        dotnet add package Tailbreeze
+                        dotnet add package Noundry.Tailbreeze
                     </div>
 
                     <a href="tailbreeze.html" class="inline-flex items-center text-cyan-600 dark:text-cyan-400 font-semibold">
