--- a/nd-cli.html
+++ b/nd-cli.html
@@ -285,7 +285,7 @@
                                 <div>dotnet build -c Release</div>
                                 <div>dotnet tool install --global Noundry.Engine.Cli</div>
                                 <div>ndng init</div>
-                                <div>dotnet tool install --global Noundry.Slurp</div>
+                                <div>dotnet tool install --global Noundry.Slurp.Tool</div>
                                 <div>slurp process</div>
                             </div>
                         </div>
