--- a/sod.html
+++ b/sod.html
@@ -207,7 +207,7 @@
                         <div class="ml-4 text-gray-400 text-xs font-mono">UserValidator.cs</div>
                     </div>
                     <div class="p-6 overflow-x-auto">
-                        <pre class="text-sm font-mono"><code><span class="text-purple-400">using</span> <span class="text-gray-200">Sod;</span>
+                        <pre class="text-sm font-mono"><code><span class="text-purple-400">using</span> <span class="text-gray-200">Noundry.Sod;</span>
 
 <span class="text-gray-500">// Define a schema</span>
 <span class="text-purple-400">var</span> <span class="text-gray-200">userSchema</span> <span class="text-gray-200">=</span> <span class="text-blue-400">Sod</span><span class="text-gray-200">.</span><span class="text-green-400">Object</span><span class="text-gray-200">&lt;</span><span class="text-blue-400">User</span><span class="text-gray-200">&gt;()</span>
