--- a/tailbreeze.html
+++ b/tailbreeze.html
@@ -118,9 +118,9 @@
                         <h3 class="text-xl font-semibold text-gray-900 dark:text-white mb-4">1. Install Packages</h3>
                         <div class="bg-gray-900 dark:bg-gray-800 rounded-lg p-4 font-mono text-sm space-y-2">
                             <div class="text-cyan-400"># Runtime library</div>
-                            <div class="text-gray-300">$ dotnet add package Tailbreeze</div>
+                            <div class="text-gray-300">$ dotnet add package Noundry.Tailbreeze</div>
                             <div class="text-cyan-400 mt-3"># Build-time integration</div>
-                            <div class="text-gray-300">$ dotnet add package Tailbreeze.Build</div>
+                            <div class="text-gray-300">$ dotnet add package Noundry.Tailbreeze.Build</div>
                         </div>
                     </div>
 
@@ -739,10 +739,10 @@ $ curl -sLO https://github.com/tailwindlabs/tailwindcss/releases/latest/download
             <!-- Package badges -->
             <div class="mt-12 flex flex-wrap justify-center gap-4">
                 <div class="bg-white/10 backdrop-blur rounded-lg px-4 py-2 font-mono text-sm">
-                    dotnet add package Tailbreeze
+                    dotnet add package Noundry.Tailbreeze
                 </div>
                 <div class="bg-white/10 backdrop-blur rounded-lg px-4 py-2 font-mono text-sm">
-                    dotnet add package Tailbreeze.Build
+                    dotnet add package Noundry.Tailbreeze.Build
                 </div>
             </div>
         </div>
