--- a/bowtie.html
+++ b/bowtie.html
@@ -163,7 +163,7 @@
     <span class="text-blue-400">[CheckConstraint("Price > 0")]</span>
     <span class="text-purple-400">public</span> <span class="text-purple-400">decimal</span> <span class="text-blue-400">Price</span> { <span class="text-purple-400">get</span>; <span class="text-purple-400">set</span>; }
 
-    <span class="text-blue-400">[ForeignKey("Categories", "Id")]</span>
+    <span class="text-blue-400">[ForeignKey("Categories", ReferencedColumn = "Id")]</span>
     <span class="text-purple-400">public</span> <span class="text-purple-400">int</span> <span class="text-blue-400">CategoryId</span> { <span class="text-purple-400">get</span>; <span class="text-purple-400">set</span>; }
     
     <span class="text-blue-400">[Column(TypeName = "datetime2")]</span>
@@ -338,7 +338,7 @@
                                     <p class="text-gray-600 dark:text-gray-300 text-sm">Create single-column index</p>
                                 </div>
                                 <div class="border-l-4 border-purple-500 pl-4">
-                                    <h5 class="font-semibold text-gray-900 dark:text-white">[Index("name", Unique = true)]</h5>
+                                    <h5 class="font-semibold text-gray-900 dark:text-white">[Index("name", IsUnique = true)]</h5>
                                     <p class="text-gray-600 dark:text-gray-300 text-sm">Create unique index</p>
                                 </div>
                                 <div class="border-l-4 border-purple-500 pl-4">
@@ -362,7 +362,7 @@
     <span class="text-purple-400">public</span> <span class="text-purple-400">string</span> <span class="text-blue-400">Name</span> { <span class="text-purple-400">get</span>; <span class="text-purple-400">set</span>; }
 
     <span class="text-gray-500">// Unique index for email addresses</span>
-    <span class="text-blue-400">[Index("IX_Products_SKU", Unique = true)]</span>
+    <span class="text-blue-400">[Index("IX_Products_SKU", IsUnique = true)]</span>
     <span class="text-blue-400">[Column(MaxLength = 50)]</span>
     <span class="text-purple-400">public</span> <span class="text-purple-400">string</span> <span class="text-blue-400">SKU</span> { <span class="text-purple-400">get</span>; <span class="text-purple-400">set</span>; }
 
@@ -458,11 +458,11 @@
                             
                             <div class="space-y-3">
                                 <div class="border-l-4 border-blue-500 pl-4">
-                                    <h5 class="font-semibold text-gray-900 dark:text-white">[ForeignKey("table", "column")]</h5>
+                                    <h5 class="font-semibold text-gray-900 dark:text-white">[ForeignKey("table", ReferencedColumn = "column")]</h5>
                                     <p class="text-gray-600 dark:text-gray-300 text-sm">Define foreign key relationship</p>
                                 </div>
                                 <div class="border-l-4 border-blue-500 pl-4">
-                                    <h5 class="font-semibold text-gray-900 dark:text-white">OnDelete = Rule.Cascade</h5>
+                                    <h5 class="font-semibold text-gray-900 dark:text-white">OnDelete = ReferentialAction.Cascade</h5>
                                     <p class="text-gray-600 dark:text-gray-300 text-sm">Cascading delete behavior</p>
                                 </div>
                                 <div class="border-l-4 border-blue-500 pl-4">
@@ -497,7 +497,7 @@
     <span class="text-purple-400">public</span> <span class="text-purple-400">string</span> <span class="text-blue-400">Name</span> { <span class="text-purple-404">get</span>; <span class="text-purple-404">set</span>; }
 
     <span class="text-gray-500">// Foreign key with cascade delete</span>
-    <span class="text-blue-400">[ForeignKey("Categories", "Id", OnDelete = Rule.Cascade)]</span>
+    <span class="text-blue-400">[ForeignKey("Categories", "Id", OnDelete = ReferentialAction.Cascade)]</span>
     <span class="text-purple-404">public</span> <span class="text-purple-404">int</span> <span class="text-blue-404">CategoryId</span> { <span class="text-purple-404">get</span>; <span class="text-purple-404">set</span>; }
 }
 
@@ -689,7 +689,7 @@
     <span class="text-blue-400">[Column(TypeName = "decimal(10,2)")]</span>
     <span class="text-purple-400">public</span> <span class="text-purple-400">decimal</span> <span class="text-blue-400">Price</span> { <span class="text-purple-400">get</span>; <span class="text-purple-400">set</span>; }
 
-    <span class="text-blue-400">[ForeignKey("Categories", "Id")]</span>
+    <span class="text-blue-400">[ForeignKey("Categories", ReferencedColumn = "Id")]</span>
     <span class="text-blue-400">[Index("IX_Products_Category_Active", Order = 1)]</span>
     <span class="text-purple-400">public</span> <span class="text-purple-400">int</span> <span class="text-blue-400">CategoryId</span> { <span class="text-purple-400">get</span>; <span class="text-purple-400">set</span>; }
 
