--- a/connector.html
+++ b/connector.html
@@ -213,7 +213,7 @@
                     <p class="text-gray-600 dark:text-gray-300 mb-6">Start the interactive wizard to generate your API client:</p>
                     <div class="bg-gray-900 dark:bg-gray-800 p-6 rounded-lg overflow-x-auto">
                         <pre class="text-green-400 font-mono text-sm"><code># Start the interactive generator
-noundry-connector generate
+connector-gen generate
 
 # Or use the short form
 noundry-connector gen</code></pre>
@@ -226,7 +226,7 @@ noundry-connector gen</code></pre>
                     <p class="text-gray-600 dark:text-gray-300 mb-6">Skip the interactive wizard by providing parameters directly:</p>
                     <div class="bg-gray-900 dark:bg-gray-800 p-6 rounded-lg overflow-x-auto">
                         <pre class="text-green-400 font-mono text-sm"><code># Generate with specific options
-noundry-connector generate \
+connector-gen generate \
   --url "https://api.example.com" \
   --namespace "MyApp.ApiClients" \
   --output "./Generated" \
@@ -276,7 +276,7 @@ noundry-connector generate \
                     </div>
                     <div class="mt-4">
                         <div class="bg-gray-900 dark:bg-gray-800 p-4 rounded-lg">
-                            <code class="text-green-400 font-mono text-sm">noundry-connector generate --config-file noundry-connector.json</code>
+                            <code class="text-green-400 font-mono text-sm">connector-gen generate --config-file noundry-connector.json</code>
                         </div>
                     </div>
                 </div>
@@ -344,7 +344,7 @@ noundry-connector generate \
 dotnet tool install -g Noundry.Connector.Generator
 
 # Verify installation
-noundry-connector --version</code></pre>
+connector-gen --version</code></pre>
                     </div>
                 </div>
 
@@ -358,7 +358,7 @@ noundry-connector --version</code></pre>
                     </div>
                     <div class="bg-gray-900 dark:bg-gray-700 p-6 rounded-lg overflow-x-auto">
                         <pre class="text-green-400 font-mono text-sm"><code># Start the generator
-noundry-connector generate
+connector-gen generate
 
 # Follow the interactive prompts:
 # > API URL: https://jsonplaceholder.typicode.com
@@ -368,7 +368,7 @@ noundry-connector generate
 # > Authentication: None (public API)
 
 # Or use command line options:
-noundry-connector generate \
+connector-gen generate \
   --url "https://jsonplaceholder.typicode.com" \
   --client-name "JsonPlaceholderClient" \
   --namespace "MyApp.ApiClients" \
@@ -503,11 +503,11 @@ public class BlogService
                     <p class="text-gray-600 dark:text-gray-300 mb-4">Generate from OpenAPI specifications:</p>
                     <div class="bg-gray-900 dark:bg-gray-800 p-4 rounded-lg overflow-x-auto">
                         <pre class="text-green-400 font-mono text-sm"><code># From Swagger URL
-noundry-connector generate \
+connector-gen generate \
   --swagger-url "https://api.example.com/swagger.json"
 
 # From local file
-noundry-connector generate \
+connector-gen generate \
   --swagger-file "./openapi.yaml"</code></pre>
                     </div>
                 </div>
@@ -518,11 +518,11 @@ noundry-connector generate \
                     <p class="text-gray-600 dark:text-gray-300 mb-4">Use custom code generation templates:</p>
                     <div class="bg-gray-900 dark:bg-gray-800 p-4 rounded-lg overflow-x-auto">
                         <pre class="text-green-400 font-mono text-sm"><code># Use custom template directory
-noundry-connector generate \
+connector-gen generate \
   --templates "./CustomTemplates"
 
 # List available templates
-noundry-connector templates list</code></pre>
+connector-gen templates list</code></pre>
                     </div>
                 </div>
 
@@ -532,11 +532,11 @@ noundry-connector templates list</code></pre>
                     <p class="text-gray-600 dark:text-gray-300 mb-4">Generate multiple clients at once:</p>
                     <div class="bg-gray-900 dark:bg-gray-800 p-4 rounded-lg overflow-x-auto">
                         <pre class="text-green-400 font-mono text-sm"><code># Use batch configuration
-noundry-connector batch \
+connector-gen batch \
   --config "./batch-config.json"
 
 # Generate from multiple URLs
-noundry-connector batch \
+connector-gen batch \
   --urls "api1.com,api2.com,api3.com"</code></pre>
                     </div>
                 </div>
@@ -547,11 +547,11 @@ noundry-connector batch \
                     <p class="text-gray-600 dark:text-gray-300 mb-4">Regenerate when APIs change:</p>
                     <div class="bg-gray-900 dark:bg-gray-800 p-4 rounded-lg overflow-x-auto">
                         <pre class="text-green-400 font-mono text-sm"><code># Update existing client
-noundry-connector update \
+connector-gen update \
   --config "./noundry-connector.json"
 
 # Compare with existing
-noundry-connector diff \
+connector-gen diff \
   --config "./noundry-connector.json"</code></pre>
                     </div>
                 </div>
@@ -576,7 +576,7 @@ noundry-connector diff \
                             <h4 class="font-semibold text-gray-900 dark:text-white mb-2">SSL Certificate Issues</h4>
                             <p class="text-gray-600 dark:text-gray-300 mb-2">If you encounter SSL certificate errors:</p>
                             <div class="bg-gray-900 dark:bg-gray-700 p-4 rounded-lg">
-                                <code class="text-green-400 font-mono text-sm">noundry-connector generate --ignore-ssl-errors</code>
+                                <code class="text-green-400 font-mono text-sm">connector-gen generate --ignore-ssl-errors</code>
                             </div>
                         </div>
 
@@ -584,7 +584,7 @@ noundry-connector diff \
                             <h4 class="font-semibold text-gray-900 dark:text-white mb-2">Authentication Failures</h4>
                             <p class="text-gray-600 dark:text-gray-300 mb-2">For APIs requiring authentication during discovery:</p>
                             <div class="bg-gray-900 dark:bg-gray-700 p-4 rounded-lg">
-                                <code class="text-green-400 font-mono text-sm">noundry-connector generate --auth-header "Authorization: Bearer YOUR_TOKEN"</code>
+                                <code class="text-green-400 font-mono text-sm">connector-gen generate --auth-header "Authorization: Bearer YOUR_TOKEN"</code>
                             </div>
                         </div>
 
@@ -592,7 +592,7 @@ noundry-connector diff \
                             <h4 class="font-semibold text-gray-900 dark:text-white mb-2">Large API Responses</h4>
                             <p class="text-gray-600 dark:text-gray-300 mb-2">For APIs with large response payloads:</p>
                             <div class="bg-gray-900 dark:bg-gray-700 p-4 rounded-lg">
-                                <code class="text-green-400 font-mono text-sm">noundry-connector generate --sample-size 10 --timeout 60</code>
+                                <code class="text-green-400 font-mono text-sm">connector-gen generate --sample-size 10 --timeout 60</code>
                             </div>
                         </div>
 
@@ -600,7 +600,7 @@ noundry-connector diff \
                             <h4 class="font-semibold text-gray-900 dark:text-white mb-2">Proxy Configuration</h4>
                             <p class="text-gray-600 dark:text-gray-300 mb-2">Working behind a corporate proxy:</p>
                             <div class="bg-gray-900 dark:bg-gray-700 p-4 rounded-lg">
-                                <code class="text-green-400 font-mono text-sm">noundry-connector generate --proxy "http://proxy.company.com:8080"</code>
+                                <code class="text-green-400 font-mono text-sm">connector-gen generate --proxy "http://proxy.company.com:8080"</code>
                             </div>
                         </div>
                     </div>
