--- a/guardian.html
+++ b/guardian.html
@@ -113,7 +113,7 @@
                     <div class="bg-white dark:bg-gray-900 rounded-xl p-6 shadow-lg">
                         <h3 class="text-xl font-semibold text-gray-900 dark:text-white mb-4">1. Installation</h3>
                         <div class="bg-gray-900 dark:bg-gray-800 rounded-lg p-4 font-mono text-sm">
-                            <div class="text-accent-500">$ dotnet add package Guardian</div>
+                            <div class="text-accent-500">$ dotnet add package Noundry.Guardian</div>
                         </div>
                         <p class="text-gray-600 dark:text-gray-300 text-sm mt-3">Or via Package Manager Console:</p>
                         <div class="bg-gray-900 dark:bg-gray-800 rounded-lg p-4 font-mono text-sm mt-2">
@@ -124,7 +124,7 @@
                     <div class="bg-white dark:bg-gray-900 rounded-xl p-6 shadow-lg">
                         <h3 class="text-xl font-semibold text-gray-900 dark:text-white mb-4">2. Add Using Statement</h3>
                         <div class="bg-gray-900 dark:bg-gray-800 rounded-lg p-4 font-mono text-sm">
-                            <div><span class="text-purple-400">using</span> <span class="text-yellow-400">Guardian</span>;</div>
+                            <div><span class="text-purple-400">using</span> <span class="text-yellow-400">Noundry.Guardian</span>;</div>
                         </div>
                     </div>
                     
@@ -146,7 +146,7 @@
                         <div class="ml-4 text-gray-400 text-sm font-mono">Product.cs</div>
                     </div>
                     <div class="font-mono text-sm text-gray-300 overflow-x-auto">
-                        <pre><code><span class="text-purple-400">using</span> <span class="text-yellow-400">Guardian</span>;
+                        <pre><code><span class="text-purple-400">using</span> <span class="text-yellow-400">Noundry.Guardian</span>;
 
 <span class="text-purple-400">public</span> <span class="text-purple-400">class</span> <span class="text-yellow-400">Product</span>
 {
@@ -721,7 +721,7 @@
                     
                     <div class="mt-6 p-4 bg-gray-50 dark:bg-gray-800 rounded-lg">
                         <div class="text-sm font-mono text-gray-800 dark:text-gray-200">
-                            &lt;PackageReference Include="Guardian" Version="1.0.0" /&gt;
+                            &lt;PackageReference Include="Noundry.Guardian" Version="1.0.0" /&gt;
                         </div>
                     </div>
                 </div>
