--- a/razorhelpers.html
+++ b/razorhelpers.html
@@ -113,7 +113,7 @@
                     <div class="bg-white dark:bg-gray-900 rounded-xl p-6 shadow-lg">
                         <h3 class="text-xl font-semibold text-gray-900 dark:text-white mb-4">1. Installation</h3>
                         <div class="bg-gray-900 dark:bg-gray-800 rounded-lg p-4 font-mono text-sm">
-                            <div class="text-purple-500">$ dotnet add package RazorHelpers</div>
+                            <div class="text-purple-500">$ dotnet add package Noundry.RazorHelpers</div>
                         </div>
                     </div>
 
@@ -616,7 +616,7 @@ app.<span class="text-green-400">MapGet</span>(<span class="text-orange-400">"/u
                 Install RazorHelpers and start building HTML with a fluent, type-safe API today.
             </p>
             <div class="bg-gray-900 rounded-lg p-6 font-mono text-lg text-gray-300 inline-block">
-                <span class="text-purple-400">$</span> dotnet add package RazorHelpers
+                <span class="text-purple-400">$</span> dotnet add package Noundry.RazorHelpers
             </div>
             <div class="mt-8 flex justify-center gap-4">
                 <a href="https://github.com/noundry/RazorHelpers" class="hidden bg-white text-purple-600 hover:bg-purple-50 px-6 py-3 rounded-lg font-semibold transition-colors">
