--- a/slurp.html
+++ b/slurp.html
@@ -194,7 +194,7 @@
 
                     <h3 class="text-xl font-semibold text-gray-900 dark:text-white mb-4">Global CLI Tool</h3>
                     <div class="bg-gray-900 dark:bg-gray-700 rounded-lg p-4 font-mono text-sm text-gray-300">
-                        <div class="text-emerald-500">$ dotnet tool install -g Noundry.Slurp</div>
+                        <div class="text-emerald-500">$ dotnet tool install -g Noundry.Slurp.Tool</div>
                     </div>
                 </div>
 
@@ -354,9 +354,9 @@
         );
 
         <span class="text-gray-500">// Check the results</span>
-        <span class="text-yellow-400">Console</span>.<span class="text-green-400">WriteLine</span>(<span class="text-orange-400">$"✓ Ingested </span>{<span class="text-blue-400">result</span>.<span class="text-green-400">RowCount</span>}<span class="text-orange-400"> rows"</span>);
+        <span class="text-yellow-400">Console</span>.<span class="text-green-400">WriteLine</span>(<span class="text-orange-400">$"✓ Ingested </span>{<span class="text-blue-400">result</span>.<span class="text-green-400">RowsInserted</span>}<span class="text-orange-400"> rows"</span>);
         <span class="text-yellow-400">Console</span>.<span class="text-green-400">WriteLine</span>(<span class="text-orange-400">$"⚡ Speed: </span>{<span class="text-blue-400">result</span>.<span class="text-green-400">RowsPerSecond</span>:N0}<span class="text-orange-400"> rows/sec"</span>);
-        <span class="text-yellow-400">Console</span>.<span class="text-green-400">WriteLine</span>(<span class="text-orange-400">$"⏱️ Time: </span>{<span class="text-blue-400">result</span>.<span class="text-green-400">ElapsedTime</span>}<span class="text-orange-400">"</span>);
+        <span class="text-yellow-400">Console</span>.<span class="text-green-400">WriteLine</span>(<span class="text-orange-400">$"⏱️ Time: </span>{<span class="text-blue-400">result</span>.<span class="text-green-400">Duration</span>}<span class="text-orange-400">"</span>);
     }
 }</code></pre>
                     </div>
