--- a/assertive.html
+++ b/assertive.html
@@ -46,8 +46,8 @@
                         <div class="text-gray-600 dark:text-gray-400 text-sm">Assertion Methods</div>
                     </div>
                     <div class="text-center">
-                        <div class="text-3xl font-bold text-primary-600 dark:text-primary-400">100%</div>
-                        <div class="text-gray-600 dark:text-gray-400 text-sm">Fluent API</div>
+                        <div class="text-3xl font-bold text-primary-600 dark:text-primary-400".NET 8-10</div>
+                        <div class="text-gray-600 dark:text-gray-400 text-sm">Framework Support</div>
                     </div>
                 </div>
             </div>
