--- a/blueprints.html
+++ b/blueprints.html
@@ -829,7 +829,7 @@ slurp customers.csv --provider postgres --connection $DB_URL --table customers
                             <button onclick="copyCode('andy-code')" class="px-3 py-1 bg-primary-600 text-white text-xs rounded hover:bg-primary-700">Copy</button>
                         </div>
                         <pre id="andy-code" class="text-sm font-mono text-gray-100"><code># Install Andy CLI
-dotnet tool install -g Noundry.Andy
+dotnet tool install --global Noundry.Andy
 
 # Authenticate
 andy auth login
