--- a/bowtie.html
+++ b/bowtie.html
@@ -804,7 +804,7 @@
                     <div class="mt-6 bg-gray-100 dark:bg-gray-800 rounded-lg p-4">
                         <h5 class="font-semibold text-gray-900 dark:text-white mb-2">Install CLI Tool:</h5>
                         <div class="font-mono text-sm text-gray-700 dark:text-gray-300">
-                            $ dotnet tool install -g Noundry.Tuxedo.Bowtie.Tool
+                            $ dotnet tool install --global Noundry.Tuxedo.Bowtie.Tool
                         </div>
                     </div>
                 </div>
