--- a/connector.html
+++ b/connector.html
@@ -118,7 +118,7 @@
                         <div>
                             <p class="text-sm font-medium text-gray-700 dark:text-gray-300 mb-2">Global Installation:</p>
                             <div class="bg-gray-900 dark:bg-gray-800 p-4 rounded-lg">
-                                <code class="text-green-400 font-mono text-sm">dotnet tool install -g Noundry.Connector.Generator</code>
+                                <code class="text-green-400 font-mono text-sm">dotnet tool install --global Noundry.Connector.Generator</code>
                             </div>
                         </div>
                         
@@ -341,7 +341,7 @@ connector-gen generate \
                     </div>
                     <div class="bg-gray-900 dark:bg-gray-700 p-6 rounded-lg overflow-x-auto">
                         <pre class="text-green-400 font-mono text-sm"><code># Install globally
-dotnet tool install -g Noundry.Connector.Generator
+dotnet tool install --global Noundry.Connector.Generator
 
 # Verify installation
 connector-gen --version</code></pre>
