--- a/dotenvx.html
+++ b/dotenvx.html
@@ -116,7 +116,7 @@
                             <div class="text-yellow-500"># Package installation</div>
                             <div class="text-yellow-500">$ dotnet add package Noundry.DotEnvX</div>
                             <div class="text-gray-400"># Optional: CLI tool for encryption</div>
-                            <div class="text-yellow-500">$ dotnet tool install -g Noundry.DotEnvX.Tool</div>
+                            <div class="text-yellow-500">$ dotnet tool install --global Noundry.DotEnvX.Tool</div>
                         </div>
                     </div>
                     
@@ -421,7 +421,7 @@
                         <div class="bg-gray-900 dark:bg-gray-800 rounded-lg p-6">
                             <div class="font-mono text-sm text-gray-300 space-y-3">
                                 <div class="text-yellow-500"># Install CLI tool globally</div>
-                                <div class="text-yellow-500">$ dotnet tool install -g Noundry.DotEnvX.Tool</div>
+                                <div class="text-yellow-500">$ dotnet tool install --global Noundry.DotEnvX.Tool</div>
                                 <div class="text-gray-400">✅ Tool installed successfully</div>
                                 
                                 <div class="text-yellow-500"># Generate encryption key</div>
