--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
             <div class="flex items-center justify-between flex-wrap gap-4">
                 <div class="flex items-center gap-3">
                     <span class="inline-flex items-center px-3 py-1 bg-white/20 rounded-full text-white text-xs font-semibold">
-                        ✨ v0.9.0
+                        ✨ v0.9.20
                     </span>
                     <span class="text-white font-semibold">
                         NounJS:
@@ -322,7 +322,7 @@
                     New Products & Platform Improvements
                 </h2>
                 <p class="text-xl mb-6 max-w-3xl mx-auto opacity-95">
-                    Sentinel APM launched, NounJS v0.9.0 released, and AI Gateway v1.1.0 with multi-provider support
+                    Sentinel APM launched, NounJS v0.9.20 released, and AI Gateway v1.1.0 with multi-provider support
                 </p>
                 <div class="grid md:grid-cols-4 gap-6 mt-8">
                     <div class="bg-white/10 backdrop-blur-sm rounded-lg p-6">
@@ -1624,16 +1624,16 @@
                         <div class="space-y-3">
                             <h4 class="text-sm font-semibold text-green-600 dark:text-green-400 mb-2">CLI Installation</h4>
                             <div class="font-mono text-xs bg-gray-100 dark:bg-gray-700 p-2 rounded">
-                                <span class="text-accent-500">dotnet tool install -g</span> <span class="text-gray-600 dark:text-gray-300">Noundry.Slurp.Tool</span>
+                                <span class="text-accent-500">dotnet tool install --global</span> <span class="text-gray-600 dark:text-gray-300">Noundry.Slurp.Tool</span>
                             </div>
                             <div class="font-mono text-xs bg-gray-100 dark:bg-gray-700 p-2 rounded">
-                                <span class="text-accent-500">dotnet tool install -g</span> <span class="text-gray-600 dark:text-gray-300">Noundry.Cufflink</span>
+                                <span class="text-accent-500">dotnet tool install --global</span> <span class="text-gray-600 dark:text-gray-300">Noundry.Cufflink</span>
                             </div>
                             <div class="font-mono text-xs bg-gray-100 dark:bg-gray-700 p-2 rounded">
-                                <span class="text-accent-500">dotnet tool install -g</span> <span class="text-gray-600 dark:text-gray-300">Noundry.Jobs</span>
+                                <span class="text-accent-500">dotnet tool install --global</span> <span class="text-gray-600 dark:text-gray-300">Noundry.Jobs</span>
                             </div>
                             <div class="font-mono text-xs bg-gray-100 dark:bg-gray-700 p-2 rounded">
-                                <span class="text-accent-500">dotnet tool install -g</span> <span class="text-gray-600 dark:text-gray-300">Noundry.Engine</span>
+                                <span class="text-accent-500">dotnet tool install --global</span> <span class="text-gray-600 dark:text-gray-300">Noundry.Engine</span>
                             </div>
                         </div>
                     </div>
