--- a/libraries.html
+++ b/libraries.html
@@ -216,7 +216,7 @@
                     <div class="mb-6 bg-gray-900 dark:bg-gray-700 rounded-lg p-4">
                         <div class="text-sm font-mono text-gray-300">
                             <div class="text-gray-500 mb-2"># Install CLI (Free & OSS)</div>
-                            <div class="text-red-500 mb-2">$ dotnet tool install --global Noundry.Engine.CLI</div>
+                            <div class="text-red-500 mb-2">$ dotnet tool install --global Noundry.Engine.Cli</div>
                             <div class="text-gray-500 mt-3"># Deploy your app</div>
                             <div class="text-red-500">$ engine deploy</div>
                         </div>
@@ -963,7 +963,7 @@
                     </div>
 
                     <div class="text-sm font-mono bg-gray-100 dark:bg-gray-800 rounded p-2 mb-4">
-                        dotnet tool install -g Noundry.Streams
+                        dotnet tool install --global Noundry.Streams
                     </div>
 
                     <a href="streams.html" class="inline-flex items-center text-sky-600 dark:text-sky-400 font-semibold">
