--- a/cufflink.html
+++ b/cufflink.html
@@ -121,7 +121,7 @@
                     <h3 class="text-xl font-semibold text-gray-900 dark:text-white mb-4">CLI Tool</h3>
                     <p class="text-gray-600 dark:text-gray-300 mb-4">For command-line data generation:</p>
                     <div class="bg-gray-900 dark:bg-gray-700 rounded-lg p-4 font-mono text-sm text-gray-300">
-                        <div class="text-rose-500">$ dotnet tool install -g Noundry.Tuxedo.Cufflink.CLI</div>
+                        <div class="text-rose-500">$ dotnet tool install --global Noundry.Tuxedo.Cufflink.CLI</div>
                     </div>
                 </div>
             </div>
