--- a/guardian.html
+++ b/guardian.html
@@ -702,7 +702,7 @@
                     
                     <div class="space-y-4">
                         <div class="border-l-4 border-blue-500 pl-4">
-                            <h4 class="font-semibold text-gray-900 dark:text-white">.NET 6.0, 7.0, 8.0</h4>
+                            <h4 class="font-semibold text-gray-900 dark:text-white">.NET 6.0, 7.0, 8.0, 9.0, 10.0</h4>
                             <p class="text-gray-600 dark:text-gray-300 text-sm">Full support for latest .NET versions</p>
                         </div>
                         <div class="border-l-4 border-blue-500 pl-4">
