--- a/quickstart.html
+++ b/quickstart.html
@@ -351,7 +351,7 @@
             <p class="text-gray-400 mb-4">Install in seconds:</p>
             <div class="inline-block bg-gray-800 rounded-lg px-6 py-3 font-mono">
                 <span class="text-green-400">$</span>
-                <span class="text-white"> dotnet tool install -g Noundry.Engine.Cli</span>
+                <span class="text-white"> dotnet tool install --global Noundry.Engine.Cli</span>
             </div>
         </div>
     </div>
@@ -410,7 +410,7 @@
             <div class="bg-white/10 backdrop-blur rounded-xl p-6">
                 <div class="text-3xl font-bold mb-2">1</div>
                 <div class="font-semibold mb-2">Install</div>
-                <code class="text-sm text-white/80">dotnet tool install -g Noundry.Engine.Cli</code>
+                <code class="text-sm text-white/80">dotnet tool install --global Noundry.Engine.Cli</code>
             </div>
             <div class="bg-white/10 backdrop-blur rounded-xl p-6">
                 <div class="text-3xl font-bold mb-2">2</div>
