--- a/slurp.html
+++ b/slurp.html
@@ -194,7 +194,7 @@
 
                     <h3 class="text-xl font-semibold text-gray-900 dark:text-white mb-4">Global CLI Tool</h3>
                     <div class="bg-gray-900 dark:bg-gray-700 rounded-lg p-4 font-mono text-sm text-gray-300">
-                        <div class="text-emerald-500">$ dotnet tool install -g Noundry.Slurp.Tool</div>
+                        <div class="text-emerald-500">$ dotnet tool install --global Noundry.Slurp.Tool</div>
                     </div>
                 </div>
 
