--- a/streams.html
+++ b/streams.html
@@ -314,7 +314,7 @@
 
                     <h3 class="text-xl font-semibold text-gray-900 dark:text-white mb-4">.NET Tool</h3>
                     <div class="bg-gray-900 dark:bg-gray-700 rounded-lg p-4 font-mono text-sm text-gray-300">
-                        <div class="text-sky-500">$ dotnet tool install -g Noundry.Streams</div>
+                        <div class="text-sky-500">$ dotnet tool install --global Noundry.Streams</div>
                     </div>
                 </div>
 
