--- a/ai-gateway.html
+++ b/ai-gateway.html
@@ -83,6 +83,31 @@
                     </p>
                 </div>
 
+                <!-- Hosted API Callout -->
+                <div class="bg-gradient-to-r from-primary-50 to-blue-50 dark:from-primary-900/20 dark:to-blue-900/20 border border-primary-200 dark:border-primary-800 rounded-xl p-8">
+                    <div class="flex items-start gap-4">
+                        <div class="w-12 h-12 bg-primary-100 dark:bg-primary-900 rounded-lg flex items-center justify-center flex-shrink-0">
+                            <svg class="w-6 h-6 text-primary-600 dark:text-primary-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3.055 11H5a2 2 0 012 2v1a2 2 0 002 2 2 2 0 012 2v2.945M8 3.935V5.5A2.5 2.5 0 0010.5 8h.5a2 2 0 012 2 2 2 0 104 0 2 2 0 012-2h1.064M15 20.488V18a2 2 0 012-2h3.064M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+                            </svg>
+                        </div>
+                        <div>
+                            <h3 class="text-xl font-bold text-gray-900 dark:text-white mb-2">Hosted API Available</h3>
+                            <p class="text-gray-600 dark:text-gray-300 mb-4">
+                                The AI Gateway is deployed and ready to use at <code class="bg-gray-200 dark:bg-gray-700 px-2 py-1 rounded text-sm">https://api.noundry.ai</code>. This is a <strong>BYOK (Bring Your Own Key)</strong> service - you provide your own provider API keys, and we relay requests to the appropriate provider. No markup on provider costs.
+                            </p>
+                            <div class="flex flex-wrap gap-3">
+                                <a href="#webapi" @click="activeCategory = 'webapi'" class="inline-flex items-center px-4 py-2 bg-primary-600 hover:bg-primary-700 text-white rounded-lg text-sm font-medium transition-colors">
+                                    View API Docs
+                                    <svg class="w-4 h-4 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
+                                    </svg>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
                     <div class="bg-gray-50 dark:bg-gray-800 rounded-lg p-6">
                         <div class="w-12 h-12 bg-blue-100 dark:bg-blue-900 rounded-lg flex items-center justify-center mb-4">
@@ -634,7 +659,35 @@ foreach (var response in multiResponse.Responses)
                 <div>
                     <h2 class="text-3xl font-bold text-gray-900 dark:text-white mb-6">Web API</h2>
                     <p class="text-lg text-gray-600 dark:text-gray-300 mb-6">
-                        Deploy the AI Gateway as a Web API to provide a centralized AI service for your organization or applications.
+                        The AI Gateway is deployed at <strong>https://api.noundry.ai</strong> as a BYOK (Bring Your Own Key) service. Use your own provider API keys - we simply relay requests to the appropriate provider with no markup.
+                    </p>
+                </div>
+
+                <!-- BYOK Explanation -->
+                <div class="bg-blue-50 dark:bg-blue-900/20 border border-blue-200 dark:border-blue-800 rounded-lg p-6">
+                    <h4 class="font-semibold text-blue-900 dark:text-blue-300 mb-3">How BYOK Works</h4>
+                    <div class="overflow-x-auto">
+                        <table class="min-w-full text-sm">
+                            <thead>
+                                <tr class="text-left border-b border-blue-200 dark:border-blue-700">
+                                    <th class="py-2 pr-4 font-semibold text-blue-900 dark:text-blue-300">Header</th>
+                                    <th class="py-2 font-semibold text-blue-900 dark:text-blue-300">Purpose</th>
+                                </tr>
+                            </thead>
+                            <tbody class="text-blue-800 dark:text-blue-200">
+                                <tr class="border-b border-blue-100 dark:border-blue-800">
+                                    <td class="py-2 pr-4"><code class="bg-blue-100 dark:bg-blue-800 px-2 py-1 rounded">Authorization</code></td>
+                                    <td class="py-2">Your gateway API key (for authentication to the gateway)</td>
+                                </tr>
+                                <tr>
+                                    <td class="py-2 pr-4"><code class="bg-blue-100 dark:bg-blue-800 px-2 py-1 rounded">X-API-KEY</code></td>
+                                    <td class="py-2">Your provider API key (passed through to OpenAI/Anthropic/Google)</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <p class="text-blue-800 dark:text-blue-200 mt-3 text-sm">
+                        The gateway routes your request based on the model string (e.g., <code class="bg-blue-100 dark:bg-blue-800 px-1 rounded">openai/gpt-4</code> → OpenAI, <code class="bg-blue-100 dark:bg-blue-800 px-1 rounded">anthropic/claude-sonnet-4</code> → Anthropic).
                     </p>
                 </div>
 
@@ -650,7 +703,7 @@ foreach (var response in multiResponse.Responses)
                     <div>
                         <h3 class="text-xl font-bold text-gray-900 dark:text-white mb-3">cURL Example - Single Model</h3>
                         <div class="bg-gray-900 rounded-lg p-4">
-                            <pre class="text-sm"><code class="language-bash">curl -X POST "https://aigw.noundry.ai/v1/chat/completions" \
+                            <pre class="text-sm"><code class="language-bash">curl -X POST "https://api.noundry.ai/v1/chat/completions" \
   -H "Authorization: Bearer demo-key-12345" \
   -H "X-API-KEY: Bearer $OPENAI_API_KEY" \
   -H "Content-Type: application/json" \
@@ -672,7 +725,7 @@ foreach (var response in multiResponse.Responses)
                     <div>
                         <h3 class="text-xl font-bold text-gray-900 dark:text-white mb-3">cURL Example - Multi-Provider Fallback</h3>
                         <div class="bg-gray-900 rounded-lg p-4">
-                            <pre class="text-sm"><code class="language-bash">curl -X POST "https://aigw.noundry.ai/v1/chat/completions" \
+                            <pre class="text-sm"><code class="language-bash">curl -X POST "https://api.noundry.ai/v1/chat/completions" \
   -H "Authorization: Bearer demo-key-12345" \
   -H "Content-Type: application/json" \
   -d '{
