--- a/jobs.html
+++ b/jobs.html
@@ -85,6 +85,12 @@
                             </svg>
                             Email support via SMTP (MailKit)
                         </li>
+                        <li class="flex items-start">
+                            <svg class="w-5 h-5 text-blue-600 dark:text-blue-400 mr-2 mt-0.5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                            </svg>
+                            Heartbeat monitoring (Jobably integration)
+                        </li>
                     </ul>
                 </div>
 
